--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@coreui/coreui": "^5.1.1",
@@ -15,6 +16,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "camelcase-keys": "^9.1.3",
+    "gh-pages": "^6.1.1",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
